# botwadmin

./: docker-compose.yml
admin/: base.py  main.py  models.py  pyproject.toml  settings.py
bot/: create_tables.py  createtables.sql  crud.py  keyboard.py  main.py  model.py  pyproject.toml  settings.py
