[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Nefedov <nefjodov.yurij@it.adcombo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
sqlalchemy = "^2.0.5.post1"
sqladmin = "^0.9.0"
uvicorn = "^0.21.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
