[tool.poetry]
name = "somebot"
version = "0.1.0"
description = ""
authors = ["Nefedov <nefjodov.yurij@it.adcombo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.5.post1"
aiogram = "^2.25.1"
pydantic = "^1.10.5"
black = "^23.1.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
